--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.8.2",
     "nuxt": "^3.14.159",
     "vue": "latest",
     "vue-router": "latest"
